# osop-crewai

./: README.md  pyproject.toml
.github/workflows/: ci.yml
osop_crewai/: __init__.py  exporter.py  loader.py
